# Changed-SOC-dashboard

./: DPR.docx  New Text Document.env  README.md  check_env.bat  check_environment.py  install.bat  install_basic.bat  launch.py  main.spec  pyproject.toml  requirements.txt  run.bat  run.py  run_app.py  setup.py  setup_dirs.ps1  setup_project.py
app/: __init__.py  data_generation.py  main.py  report_generation.py  tasks.py
app/api/: api_docs.py
app/assets/css/: style.css
app/auth/: auth.py
app/config/: celery_config.py  config.py  dashboard_config.py  redis_config.py
app/integrations/: siem_integration.py
app/ml/: model_trainer.py  threat_analyzer.py
app/modules/: continuous_improvement.py  data_collection.py  log_monitor.py  mitigation.py  ml_analysis.py  ml_classifier.py  threat_intelligence.py  visualization.py
app/monitoring/: dark_web_monitor.py  social_monitor.py
app/static/css/: mobile.css  style.css
app/static/js/: dashboard.js  theme.js  theme_handler.js
app/templates/: base.html  dashboard.html
app/utils/: audit_logger.py  data_processor.py  error_handler.py  theme_manager.py
cyber_threat_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
