[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber_threat_intelligence"
version = "1.0.0"
description = "Cyber Threat Intelligence Platform"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.6.0",
    "flask>=3.0.2",
    "flask-login>=0.6.3",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "PyJWT>=2.8.0",
    "flask-bcrypt>=1.0.1",
    "python-jose>=3.3.0",
    "faker>=22.6.0",
    "reportlab>=4.1.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.1"
]